--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,18 +17,18 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4
 
-            - name: Use Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: 20
-                  cache: pnpm
-                  registry-url: 'https://registry.npmjs.org'
-
             - name: Setup pnpm
               uses: pnpm/action-setup@v4
               with:
                   version: 9
                   run_install: false
+
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: 20
+                  cache: 'pnpm'
+                  registry-url: 'https://registry.npmjs.org'
 
             - name: Install dependencies
               run: pnpm install --frozen-lockfile
@@ -42,5 +42,4 @@ jobs:
             - name: Publish to npm
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-              run: |
-                  pnpm publish --access public --no-git-checks
+              run: pnpm publish --access public --no-git-checks
