--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
 	],
 	"devDependencies": {
 		"tsup": "^8.0.0",
-		"typescript": "^5.6.0"
+		"typescript": "^5.6.0",
+		"vitest": "^4.0.14",
+		"@vitest/coverage-v8": "^4.0.14",
+		"ts-node": "^10.9.2"
 	}
 }
