--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
 		"url": "https://teacoder.ru"
 	},
 	"license": "MIT",
-	"main": "./dist/index.cjs",
+	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
 	"types": "./dist/index.d.ts",
 	"exports": {
 		".": {
 			"types": "./dist/index.d.ts",
-			"import": "./dist/index.mjs",
-			"require": "./dist/index.cjs"
+			"require": "./dist/index.js",
+			"import": "./dist/index.mjs"
 		}
 	},
 	"sideEffects": false,
